# kc

./: README.md
install/: local_setup.sh  setup.sh
install/arm/lib/arm/: control_node  ebot_nav_task1A  shape  task1b  task1c  task2A  task3  task3a_tf_publisher  task3b_ur5_servo_pick_place
install/arm/share/arm/: package.dsv  package.ps1  package.sh  package.xml
install/ebot_description/share/ebot_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ebot_description/share/ebot_description/cmake/: ebot_descriptionConfig.cmake
install/ebot_description/share/ebot_description/launch/: spawn_ebot.launch.py
install/eyantra_warehouse/lib/eyantra_warehouse/: armed0.py
install/eyantra_warehouse/share/eyantra_warehouse/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/eyantra_warehouse/share/eyantra_warehouse/cmake/: eyantra_warehouseConfig.cmake
install/eyantra_warehouse/share/eyantra_warehouse/launch/: task1.launch.py  task2.launch.py
install/eyantra_warehouse/share/eyantra_warehouse/worlds/: eyantra_warehouse_task0.world  eyantra_warehouse_task1.world  eyantra_warehouse_task1_bonus.world
install/linkattacher_msgs/share/linkattacher_msgs/: package.sh
install/ur5_control/lib/ur5_control/: bonus_task2_boiler_plate.py  task1b_boiler_plate.py
install/ur5_control/share/ur5_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur_description/lib/ur_description/: random_fruits_spawner.py
install/ur_description/share/ur_description/: package.sh
install/ur_simulation_gz/lib/ur_simulation_gz/: twist_servo_cal.py
install/ur_simulation_gz/share/ur_simulation_gz/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: README.md  metadata.yaml  requirements.sh
src/arm/: setup.py
src/arm/arm/: task2b_2.py  task3.py  task3b_ur5_servo_pick_place.py
src/ebot_description/: CMakeLists.txt  package.xml
src/eyantra_warehouse/: CMakeLists.txt
src/eyantra_warehouse/config/: bridge.yaml
src/eyantra_warehouse/launch/: task0.launch.py  task1_bonus.launch.py  task2b.launch.py  task3b.launch.py
src/eyantra_warehouse/models/arm_base/: model.config  model.sdf
src/eyantra_warehouse/models/bad_fruit/: model.sdf
src/eyantra_warehouse/models/conveyor_belt/: model.sdf
src/eyantra_warehouse/models/dock_shape/: model.config  model.sdf
src/eyantra_warehouse/models/fertiliser_can/: model.config  model.sdf
src/eyantra_warehouse/models/fruit_tray/: model.sdf
src/eyantra_warehouse/models/longer_conveyor_belt/: model.config  model.sdf
src/eyantra_warehouse/models/plant_red_yellow_bell_peppers_trough/: model.config
src/eyantra_warehouse/models/square_shape/: model.sdf
src/eyantra_warehouse/models/triangle_shape/: model.config  model.sdf
src/eyantra_warehouse/models/warehouse_boundary/: model.config
src/eyantra_warehouse/models/water_tank/: water_tank.mtl
src/eyantra_warehouse/worlds/: eyantra_warehouse_task2.world
src/linkattacher_msgs/: CMakeLists.txt
src/linkattacher_msgs/srv/: AttachLink.srv
src/ur5_control/: CMakeLists.txt
src/ur_description/: CMakeLists.txt
src/ur_description/config/: initial_positions.yaml
src/ur_description/launch/: start_ur_world_launch.py  ur5_gazebo_launch.py
src/ur_description/urdf/: realsense2.urdf.xacro
src/ur_description/worlds/: empty.sdf
src/ur_simulation_gz/: CHANGELOG.rst  CMakeLists.txt
src/ur_simulation_gz/config/: ur_controllers.yaml
src/ur_simulation_gz/launch/: spawn_arm.launch.py
src/ur_simulation_gz/src/: kdl_parser_py.py  ur5_arm.urdf
src/ur_simulation_gz/test/: test_gz.py
(+47 files in other folders)
